# Prefect

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLANO_MELHORIA_ARQUITETURA.md  README.md  deployment.py  docker-compose.yml  prefect.yaml  pyproject.toml
.agents/knowledge/: dev_senior.md  planning.md  qa_chato.md
.agents/skills/arquiteto-software/: SKILL.md
.agents/skills/arquiteto-software/agents/: openai.yaml
.agents/skills/engenheiro-dados/: SKILL.md
.agents/skills/engenheiro-dados/agents/: openai.yaml
.agents/skills/engenheiro-dados/references/: extracao.md  publicacao.md
.agents/skills/preserve-project-architecture/: SKILL.md
.agents/skills/preserve-project-architecture/agents/: openai.yaml
.agents/skills/preserve-project-architecture/references/: current-architecture.md
.codex/agents/: desenvolvedor.toml  engenheiro_producao.toml  engenheiro_software.toml
.github/agents/: prefect.agent.md
pipelines/camara_deputados/deputados/: bronze.py  info.py  orquestrador.py  prata.py
pipelines/camara_deputados/despesas/: bronze.py  info.py  orquestrador.py  prata.py
pipelines/camara_deputados/legislaturas/: bronze.py  info.py  orquestrador.py  prata.py
tests/: test_camara_pipeline.py
utils/: camara.py  conexoes.py  config.py  pipeline.py
